blue-green/2_app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: app
  name: app-version-1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: app
      version: 0.0.1
  template:
    metadata:
      labels:
        run: app
        version: 0.0.1
    spec:
      containers:
      - name: app
        image: herreraluis/basic_example:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
