blue-green/3_app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: app
  name: app-green
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: app
      version: 0.0.2
  template:
    metadata:
      labels:
        run: app
        version: 0.0.2
    spec:
      containers:
      - name: app
        image: errm/versions:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
