blue-green/6_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "roundrobin"
    haproxy.org/whiteist-with-rate-limit: "ON"
  labels:
    app: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: green-service
          servicePort: 80
      - path: /blue
        backend:
          serviceName: blue-service
          servicePort: 80
